# synology-card-reporter

./: README.md  checker.py  config.example  pyproject.toml  requirements.txt
docs/plans/: 2026-01-22-sd-backup-checker-design.md
